@@ -38,7 +38,7 @@
 		<jaxb.version>2.3.1</jaxb.version>
 		<junit.version>4.13.2</junit.version>
 		<jaxrs.version>1.1.1</jaxrs.version>
-		<servlet.version>6.0.0</servlet.version>
+		<servlet.version>6.1.0</servlet.version>
 		<httpclient.version>4.5.14</httpclient.version>
 		<httpcore.version>4.4.16</httpcore.version>
 		<jetty.version>12.0.10</jetty.version>
